--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,5 +1,4 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 100%;
     height: 15rem;
@@ -7,10 +6,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 1rem;
+    margin: auto;
+    margin-bottom: 1rem;
+    border: none!important;
 }
 
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+
+@media (min-width: 769px) {
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
 }
