--- a/src/components/features/feature.css
+++ b/src/components/features/feature.css
@@ -22,3 +22,13 @@
     flex-direction: column;
 }
 
+@media (max-width: 375px) {
+    .feature_head{
+        font-size: 18px;
+        margin: 1rem;
+    }
+    .feature, .feature_card {
+        padding: 0.5rem;
+    }
+}
+
