--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,4 +1,4 @@
-.card {
+.cardd {
     transition: 0.3s;
     width: 100%;
     height: 15rem;
@@ -11,14 +11,17 @@
     border: none!important;
 }
 
-
-
-
 @media (min-width: 769px) {
-    .card {
+    .cardd {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+}
+
+@media (max-width: 425px) {
+    .cardd {
+        height: 6rem;
     }
 }
