--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,7 +1,15 @@
-.carousel {
-    align-self: center;
-    width: 100%;
-    margin: auto;
-    top: 0;
-    left: 0;
-}
+.content{
+    background-color: #f4f6ff;
+  }
+  
+  .item{
+    cursor: pointer;
+    padding-top: 10px;
+  }
+  
+  .image{
+    border-radius: 6px;
+  box-shadow: 0 0 8px 2px rgba(0,0,0,.15);
+  
+    min-width: 100%;
+  }
