--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,15 +1,52 @@
 .cardd {
     transition: 0.3s;
     width: 100%;
-    height: 15rem;
+    /* height: 15rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center;  */
     margin: auto;
     margin-bottom: 1rem;
     border: none!important;
+    position: relative;
+    border-radius: 8px;
+    /* z-index: 0; */
+    cursor: pointer;
+    background-color: #fff;
+    padding: 30px 15px;
 }
+    .cardd:hover {
+        transition: all 0.2s ease-out;
+        box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+        top: -4px;
+        border: 1px solid #cccccc;
+        background-color: white;
+        color: #176ede;
+      }
+    
+      .cardd:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: -16px;
+        right: -16px;
+        background: #00838d;
+        /* height: 32px;
+        width: 32px; */
+        border-radius: 32px;
+        transform: scale(2);
+        transform-origin: 50% 50%;
+        transition: transform 0.15s ease-out;
+      }
+    
+      .cardd:hover:before {
+        transform: scale(2.15);
+      }
+
+      .containerrr{
+          margin-top: 30px;
+      }
 
 @media (min-width: 769px) {
     .cardd {
@@ -22,6 +59,8 @@
 
 @media (max-width: 425px) {
     .cardd {
-        height: 6rem;
+        /* height: 6rem; */
+        width: 100%;
+
     }
 }
