--- a/src/components/sidedrawer/togglebutton.css
+++ b/src/components/sidedrawer/togglebutton.css
@@ -18,7 +18,7 @@
 .toggle-button_line {
     width: 30px;
     height: 2px;
-    background: white;
+    background: blue;
 }
 
 @media (min-width: 769px) {
