--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -47,6 +47,9 @@
       .containerrr{
           margin-top: 30px;
       }
+      /* .card_heading {
+          color: black;
+      } */
 
 @media (min-width: 769px) {
     .cardd {
