--- a/src/components/features/feature.css
+++ b/src/components/features/feature.css
@@ -1,5 +1,5 @@
 .feature{
-    background-color: rgb(231, 230, 230);
+    background-color: rgba(190, 190, 190, 0.747);
     display: flex;
     flex-direction: column;
     align-items: center;  
@@ -9,6 +9,7 @@
     margin: 2rem;
     font-weight: bold;
     font-size: xx-large;
+    color: white;
 }
 
 .feature, .feature_card {
