routes in route.js and signin page done

--- a/src/components/featuredjobs/featuredjobs.css
+++ b/src/components/featuredjobs/featuredjobs.css
@@ -6,9 +6,9 @@
      /* max-width: 1160px;  */
   }
   
-  .item{
+  .items{
     cursor: pointer;
-    /* padding-top: 10px;  */
+     /* padding-top: 10px;  */
     width: 295px !important;
   } 
   
