--- a/src/components/dashboard/dashboardcategories/dashboardcategories.css
+++ b/src/components/dashboard/dashboardcategories/dashboardcategories.css
@@ -1,9 +1,15 @@
 .dashboardcategories_container{
     z-index: 40;
-    padding: 1rem;
+    padding: 2rem;
     margin: 0;
     width: 100%;
     display: flex;
     overflow: auto;
 }
-
+@media (min-width: 768px) {
+    .dashboardcategories_container {
+        padding: 3rem;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+    }
+}
