--- a/src/components/dashboard/dashboardsearchbar/dashboardsearchbar.css
+++ b/src/components/dashboard/dashboardsearchbar/dashboardsearchbar.css
@@ -4,6 +4,13 @@
     align-items: center;
     justify-content: center;
     color: blue;
+    padding: 0.2rem;
+    position: fixed;
+    z-index: 80;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 .dashboardsearchbarspacers{
     flex: 1;
@@ -12,4 +19,106 @@
     background-color: rgb(208, 220, 226);
     display: flex;
     flex-direction: row;
+}
+
+.sidebar-menu {
+    background-color: rgb(17, 17, 29);
+    width: 350px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+    z-index: 500;
+}
+
+.sidebar-menu.active{
+    left: 0;
+    transition: 350ms;
+}
+
+.sidebar-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0px 8px 0px;
+    list-style: none;
+    height: 60px;
+}
+
+.sidebar-text a {
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+}
+
+.sidebar-text a:hover {
+    background-color: blue;
+}
+
+.sidebar-menu-items {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.sidebar-profilename{
+    margin:  20px 0px;
+}
+
+.MuiButton-outlined{
+    border: 1px solid white!important;
+}
+
+.sidebar-profile {
+    margin: 20px;
+    border: 1px solid white;
+    padding: 6px;
+    border-radius: 10px;
+    margin-top: -25px;
+}
+
+.sidebar-toggle {
+    background-color:rgb(17, 17, 29);
+    width: 100%;
+    height: 80px;
+    display: flex;
+    /* justify-content: start; */
+    align-items: flex-start;
+    padding-left: 10px;
+}
+.sidebar-profiletab {
+    background-color:rgb(17, 17, 29);
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+
+
+
+@media (min-width: 768px) {
+    .mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+    .desktop {
+        display: none;
+    }
 }
