--- a/src/components/dashboard/dashboardprofile/dashboardprofile.css
+++ b/src/components/dashboard/dashboardprofile/dashboardprofile.css
@@ -118,7 +118,7 @@
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white; 
-    color: black; 
+    color:  #008CBA; 
     border: 2px solid #008CBA;
     border-radius: 5px;
 }
